--- a/class 7/index.html
+++ b/class 7/index.html
@@ -37,6 +37,8 @@
 
      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In repudiandae illo ipsum, perferendis suscipit, quae, vero at magnam quas consequatur dolores aliquam rerum minus a facilis natus. Fugiat, itaque veritatis.</p>
 
+     <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/091089194042773.661d38a331980.gif" alt="">
+
      <a href="#abc">GO TO TOP</a>
     
 </body>
