--- a/class 8 and 9/index.html
+++ b/class 8 and 9/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: black;">
 
-    <h2>Tables</h2>
+    <h2 style="color: white;">Tables</h2>
 
-    <table border="5px">
-        <tr>
-                <th>Name</th>
-                <th>Contact</th>
-                <th>Address</th>
+    <table border="1px" style="background-color: red; color: white; width: 400px; height: 300px;" >
+        <tr style="background-color: black;" >
+                <th style="" >Name</th>
+                <th >Contact</th>
+                <th >Address</th>
                 <th>About</th>
         </tr>
-        <tr>
-                 <td>Safeer</td>
-                 <td>12345</td>
+        <tr >
+                 <td >Safeer</td>
+                 <td >12345</td>
                  <td>khi</td>
                  <td>developer</td>
+
         </tr>
         <tr>
                  <td>Safeer</td>
