--- a/class 8 and 9/index.html
+++ b/class 8 and 9/index.html
@@ -9,10 +9,10 @@
 
     <h2 style="color: white;">Tables</h2>
 
-    <table border="1px" style="background-color: red; color: white; width: 400px; height: 300px;" >
-        <tr style="background-color: black;" >
-                <th style="" >Name</th>
-                <th >Contact</th>
+    <table style="background-color: red; color: white; width: 400px; height: 300px; border: 1px solid white;" >
+        <tr style="background-color: black; border: 1px solid white;" >
+                <th style=" border: 1px solid white;" >Name</th>
+                <th style=" border: 1px dotted white;">Contact</th>
                 <th >Address</th>
                 <th>About</th>
         </tr>
