--- a/Css/class 13/index.html
+++ b/Css/class 13/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./bootstrap-5.3.8-dist/css/bootstrap.min.css">
-    <!-- <link
+    <!-- <link rel="stylesheet" href="./bootstrap-5.3.8-dist/css/bootstrap.min.css"> -->
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-    /> -->
+    />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -50,10 +50,7 @@
             shown by default, until the collapse plugin adds the appropriate
             classes that we use to style each element. These classes control the
             overall appearance, as well as the showing and hiding via CSS
-            transitions. You can modify any of this with custom CSS or
-            overriding our default variables. It’s also worth noting that just
-            about any HTML can go within the <code>.accordion-body</code>,
-            though the transition does limit overflow.
+            transitions.
           </div>
         </div>
       </div>
@@ -121,8 +118,22 @@
 
     <button class="btn one">This is</button>
 
-    <script src="./bootstrap-5.3.8-dist/js/bootstrap.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js -->
+    <!-- <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9EZNefY1fRsA4qVFTBviWyj-5KHY6U8LG0g&s"
+       class="card-img-top" width="100px" height="100px" alt="">
+    </div> -->
+
+    <div class="card" style="width: 18rem;">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9EZNefY1fRsA4qVFTBviWyj-5KHY6U8LG0g&s" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+
+    <!-- <script src="./bootstrap-5.3.8-dist/js/bootstrap.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js
 "></script>
   </body>
 </html>
