--- a/Javascript/Js class 31/index.html
+++ b/Javascript/Js class 31/index.html
@@ -12,18 +12,18 @@
 
     <!-- <input type="text" id="inp" onfocus="change()" onblur="blu()"> -->
 
-    <!-- <form onsubmit="submit(e)">
+    <form onsubmit="handleSubmit(event)">
       Email:
       <input type="text" id="inp" name="email" /> 
       <button type="submit">Submit</button>
-    </form> -->
+    </form>
 
-    <form>
+    <!-- <form>
       ZIP:<br />
       <input type="text" id="zip" onBlur="fillCity();" /><br />
       City:<br />
       <input type="text" id="city" />
-    </form>
+    </form> -->
 
     <script src="app.js"></script>
   </body>
